--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <option value="9"></option>
             <option value="10"></option>
         </datalist>
-        <p>Value of bet: <output id="value"></output></p>
+        <p>Value of bet: <output id="value-of-bet"></output></p>
         <button type="submit">Place Bet</button>
     </form>
     <div>
