--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <span id="player-sum"></span>
     </h2>
     <div id="player-cards"></div>
-    <p id="message"></p>
+    <div id = "msg-div"></div>
     <form id="place-bet">
-        <input type="range" id="bet" name="bet" min="0" max="10" value="0" step="1" list="markers" required>
+        <input type="range" id="bet" name="bet" min="0.5" max="10" value="0" step="0.5" list="markers" required>
         <label for="bet">Place Bet</label>
         <datalist id="markers">
             <option value="0"></option>
@@ -35,7 +35,7 @@
             <option value="10"></option>
         </datalist>
         <p>Value of bet: <output id="value-of-bet"></output></p>
-        <button type="submit">Place Bet</button>
+        <button type="submit" id ="place-bet-btn">Place Bet</button>
     </form>
     <div>
         <button id="add-chips">Add More Chips</button>
