--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <span id="player-sum"></span>
     </h2>
     <div id="player-cards"></div>
-    <div id = "msg-div"></div>
+    <div>
+        <p id = "outcome-message"></p>
+    </div>
     <form id="place-bet">
         <input type="range" id="bet" name="bet" min="0.5" max="10" value="0" step="0.5" list="markers" required>
         <label for="bet">Place Bet</label>
@@ -46,7 +48,6 @@
     <button id="hit">Hit</button>
     <button id="stay">Stay</button>
     <button id="new-hand">New Hand</button>
-    <button id="restart">Restart Game</button>
 </body>
 <script src="index.js"></script>
 </html>
